2004-02-10  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_rsh.m4 : added file.
	
	* configure.ac, config/ac_static_modules.m4, src/modules/Makefile.am : 
	Don't unconditionally include BSD rsh module.

	* src/common/hostlist.c : Update to lastest for lsd-tools.

	* src/pdsh/mod.c : Workaround glibc <= 2.2.4 dl.so bug (gnats:322)

	* src/pdsh/dsh.c (_int_handler) : Sanity check for NULL thread
	info array before attempting to print stats.

2003-12-30  Albert Chu <chu11@llnl.gov>

	* README.modules: Removed mrshd package requirement.

2003-12-22  Albert Chu <chu11@llnl.gov>

	* src/qsnet/mqshd.c (check_interfaces): Removed logically unused
	code.
	
2003-12-18  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (_setbitmap): Fixed bug when using cyclic
	distribution and non-contiguous nodesets.

	* src/pdsh/main.c, src/pdsh/opt.c: Move mod_rcmd_exit() from main()
	into opt_free() since mod_rcmd_load() is called in opt_args().

2003-12-16  Albert Chu <chu11@llnl.gov>

	* src/qsnet/qshell.c (getcommon): Renamed to readchar.

	* src/qsnet/qshell.c (getint): Modified to not use readchar.  See
	comments for info why.

	* src/qsnet/qshell.c (qshell_conv): New function.

	* src/qsnet/qshell.c (pamauth): Modified to use new qshell_conv
	function.

	* src/qsnet/qshell.c (get_qshell_info): Added "\n" to end of all
	errlog messages.

	* src/qsnet/qshd.c (doauth, qshd_get_args): Made changes to
	support changes to pamauth.

	* src/qsnet/qshd.c (qshd_get_args): Fixed bug in which remuser
	buffer was being interpreted as the command buffer.

	* src/qsnet/mqshd.c (mqshell_get_args): Made changes to support
	changes to pamauth.

	* src/qsnet/qshell.h, src/qsnet/qshell.c (errorsock): Removed this
	unused function.
	
	* src/modules/mqcmd.c (mqcmd): Made error messages have more
	consistent wording.

2003-12-12  Albert Chu <chu11@llnl.gov>

	Upgraded mqshd daemon based on changes in the original mrshd
	daemon.
	